[package]
name = "hyperz"
version = "0.1.0"
authors = ["solebox <5013box@gmail.com>"]

[[bin]]
name="main"
path="src/main.rs"

[[example]]
name="mongo"
path="src/bin/mongo.rs"

[[example]]
name="ctr"
path="src/bin/ctrenc.rs"

[dependencies]
hyper = "0.10"
bson = "0.6.1"
mongodb = "*"
rustc-serialize = "0.3"
rust-crypto="*"
rand="*"
